--- a/homework05.ipynb
+++ b/homework05.ipynb
@@ -29,9 +29,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Approximation of sigma_1 is 0.2929958326338501\n",
+      "Approximation of sigma_2 is 0.2772911639225877\n",
+      "Approximation of sigma_3 is 0.2726465253606349\n",
+      "Approximation of sigma_4 is 0.2712819376896849\n",
+      "Approximation of sigma_5 is 0.27088174885134203\n",
+      "Approximation of sigma_6 is 0.27076444732908866\n",
+      "Approximation of sigma_7 is 0.27073006962093976\n",
+      "Approximation of sigma_8 is 0.27071999494540777\n",
+      "Approximation of sigma_9 is 0.2707170425153714\n",
+      "Converged at sigma_10 = 0.2707161772954289 and tolerance = 8.65219942469686e-07 <= 1e-06\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import scipy.stats as spstats\n",
