add dividend factor to d_1 equation

--- a/homework05.ipynb
+++ b/homework05.ipynb
@@ -1228,9 +1228,9 @@
     "    \\begin{aligned}\n",
     "        f'(K) =& e^{-qT} N'(d1) \\frac{\\partial{d_1}}{\\partial{K}}  \\\\\n",
     "              =& e^{-qT} \\frac{e^{-\\frac{d_1^2}{2}}}{\\sqrt{2\\pi}} \\frac{\\partial{d_1}}{\\partial{K}}  \\\\\n",
-    "              =& e^{-qT} \\frac{e^{-\\frac{d_1^2}{2}}}{\\sqrt{2\\pi}} \\frac{1}{\\sigma \\sqrt{T-t}} \\Big[ \\frac{\\partial{\\big[ \\ln{S_0} - \\ln{K} + \\big( r + \\frac{\\sigma^2}{2} \\big)(T-t) \\big]}}{\\partial{K}} \\Big]  \\\\\n",
-    "              =& \\frac{e^{-\\big( qT + \\frac{d_1^2}{2} \\big)}}{\\sqrt{2\\pi}} \\frac{-1}{K \\sigma \\sqrt{T-t}}  \\\\\n",
-    "              =& \\frac{-e^{-\\big( qT + \\frac{d_1^2}{2} \\big)}}{K \\sigma \\sqrt{2\\pi (T-t)}}\n",
+    "              =& e^{-qT} \\frac{e^{-\\frac{d_1^2}{2}}}{\\sqrt{2\\pi}} \\frac{1}{\\sigma \\sqrt{T}} \\Big[ \\frac{\\partial{\\big[ \\ln{S_0} - \\ln{K} + \\big( r - q + \\frac{\\sigma^2}{2} \\big)T \\big]}}{\\partial{K}} \\Big]  \\\\\n",
+    "              =& \\frac{e^{-\\big( qT + \\frac{d_1^2}{2} \\big)}}{\\sqrt{2\\pi}} \\frac{-1}{K \\sigma \\sqrt{T}}  \\\\\n",
+    "              =& \\frac{-e^{-\\big( qT + \\frac{d_1^2}{2} \\big)}}{K \\sigma \\sqrt{2\\pi T}}\n",
     "    \\end{aligned}\n",
     "\\end{equation}\n",
     "  \n",
@@ -1239,10 +1239,82 @@
     "\\begin{equation}\n",
     "    \\begin{aligned}\n",
     "        K_{n+1} =& K_n - \\frac{f(K_n)}{f'(K_n)}  \\\\\n",
-    "                =& K_n - \\frac{e^{-qT} N(d1) - \\frac{1}{2}}{\\frac{-e^{-\\big( qT + \\frac{d_1^2}{2} \\big)}}{K_n \\sigma \\sqrt{2\\pi (T-t)}}}  \\\\\n",
-    "        K_{n+1} =& K_n - \\Big[ \\frac{1}{2} - e^{-qT}N(d_1) \\Big] * e^{\\big( qT + \\frac{d_1^2}{2} \\big)} * K_n \\sigma \\sqrt{2\\pi (T-t)}\n",
+    "                =& K_n - \\frac{e^{-qT} N(d1) - \\frac{1}{2}}{\\frac{-e^{-\\big( qT + \\frac{d_1^2}{2} \\big)}}{K_n \\sigma \\sqrt{2\\pi T}}}  \\\\\n",
+    "        K_{n+1} =& K_n - \\Big[ \\frac{1}{2} - e^{-qT}N(d_1) \\Big] * e^{\\big( qT + \\frac{d_1^2}{2} \\big)} * K_n \\sigma \\sqrt{2\\pi T}\n",
     "    \\end{aligned}\n",
     "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### (ii)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "K_1 = 30.437314816939534\n",
+      "K_2 = 30.439064456185854\n",
+      "Converged at K_3 = 30.439064505336926 and tolerance = 4.9151072545328134e-08 <= 1e-06\n"
+     ]
+    }
+   ],
+   "source": [
+    "#######################\n",
+    "def KDeltaNewtonEstFunc(S_0, K, r, q, T, sigma):\n",
+    "    d1 = (np.log(S_0/K) + (r - q + 0.5*(sigma**2)) * T) / (sigma*np.sqrt(T))\n",
+    "    N_d1 = spstats.norm.cdf(d1,0,1)\n",
+    "    \n",
+    "    return (.5 - np.exp(-q*T) * N_d1) * np.exp(q*T + .5*d1**2) * K * sigma * np.sqrt(2*np.pi*(T))  \n",
+    "\n",
+    "def KDeltaNewton(S_0, K_0, r, q, T, sigma):\n",
+    "    n = 0\n",
+    "    prev = K_0\n",
+    "    \n",
+    "    while True:\n",
+    "        n += 1\n",
+    "        current = prev - KDeltaNewtonEstFunc(S_0, prev, r, q, T, sigma)\n",
+    "        \n",
+    "        if abs(current - prev) > tol:\n",
+    "            print(f'K_{n} = {current}')\n",
+    "            prev = current\n",
+    "        else:\n",
+    "            print(f'Converged at K_{n} = {current} and tolerance = {abs(current-prev)} <= {tol}')\n",
+    "            break\n",
+    "    \n",
+    "    return current\n",
+    "    \n",
+    "#######################\n",
+    "# Given values\n",
+    "S_0 = 30\n",
+    "sigma = .3\n",
+    "q = 1/100\n",
+    "r = 2.5/100\n",
+    "delta_0 = .5\n",
+    "K_0 = 30\n",
+    "T = 3/12\n",
+    "\n",
+    "# Set tolerance\n",
+    "tol = 10**(-6)\n",
+    "\n",
+    "# Calculate K using Newton method\n",
+    "K_approx =  KDeltaNewton(S_0, K_0, r, q, T, sigma)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Question 6  \n",
+    "The Theta of a plain vanilla European put option is given in equation (3.79) of the book. Consider a six months put on a non-dividend paying asset with lognormal distribution with volatility 30%. Assume that the risk-free interest rates are constant at 3%. Use Newton’s method to find the largest value of $S_0}$ (i.e. the moneyness of the option) such that Θ(P ) ≥ 0."
    ]
   },
   {
