completed max moneyness based on positive theta

--- a/homework05.ipynb
+++ b/homework05.ipynb
@@ -1323,101 +1323,93 @@
     "    \\begin{aligned}\n",
     "        \\theta(P) =& -\\frac{S_0 \\sigma e^{ -\\frac{d_1^2}{2}}} {2\\sqrt{2 \\pi T}} + rKe^{-rT}N(-d_2)  \\\\\n",
     "    \\end{aligned}\n",
-    "\\end{equation}"
+    "\\end{equation}\n",
+    "\n",
+    "Examine the positive theta constraint:  \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        \\theta(P) \\geqslant 0  \\\\\n",
+    "        -\\frac{S_0 \\sigma e^{ -\\frac{d_1^2}{2}}} {2\\sqrt{2 \\pi T}} + rKe^{-rT}N(-d_2) \\geqslant & 0  \\\\\n",
+    "        \\frac{S_0 \\sigma e^{ -\\frac{d_1^2}{2}}} {2\\sqrt{2 \\pi T}} \\leqslant &  rKe^{-rT}N(-d_2)  \\\\\n",
+    "        \\frac{S_0}{K} \\leqslant & \\frac{2r \\sqrt{2 \\pi T}}{\\sigma} e^{-rT + .5d_1^2} N(-d_2)  \\\\\n",
+    "        \\frac{2r \\sqrt{2 \\pi T}}{\\sigma} e^{-rT + .5d_1^2} N(-d_2) - \\frac{S_0}{K} \\geqslant 0  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "Let $X = \\frac{S_0}{K}$, we are maximizing $f(X) = \\frac{2r \\sqrt{2 \\pi T}}{\\sigma} e^{-rT + .5d_1^2} N(-d_2) - \\frac{S_0}{K}$.  \n",
+    "\n",
+    "Examine $f'(X)$:  \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        f'(X) =& \\frac{2re^{-rT} \\sqrt{2 \\pi T}}{\\sigma} \\Big[ e^{.5d_1^2} d_1 \\frac{1}{X \\sigma \\sqrt{T}} N(-d_2) - e^{.5d_1^2} \\frac{e^{-.5d_2^2}}{\\sqrt{2 \\pi}} \\frac{1}{X \\sigma \\sqrt{T}} \\Big]  - 1  \\\\\n",
+    "        f'(X) =& \\frac{2re^{-rT} \\sqrt{2 \\pi T}}{X \\sigma^2 \\sqrt{T}} e^{.5d_1^2} \\Big[ d_1N(-d_2) - \\frac{e^{-.5d_2^2}}{\\sqrt{2 \\pi}} \\Big]  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "Thus, we set up our Newton's method:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        \\Big(\\frac{S_0}{K}\\Big)_{n+1} =& \\Big(\\frac{S_0}{K}\\Big)_n - \\frac{f\\Big( \\frac{S_0}{K} \\Big)_n}{f'\\Big( \\frac{S_0}{K} \\Big)_n}  \\\\\n",
+    "        \\text{or}  \\\\\n",
+    "        X_{n+1} =& X_n - \\frac{f(X_n)}{f'(X_n)}  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "Naturally, our initial guess will be that the option will be ATM, i.e. $\\frac{S_0}{K} = 1$ or $X=1$. We will also assume $10^{-12}$ degree of tolerance, i.e. ac"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
-   "metadata": {},
+   "execution_count": 169,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "theta/K = -0.06812296053037992\n",
-      "(S_0/K)_1 = 5.905850308384332\n",
-      "theta/K = -6.644491629986963e-17\n",
-      "(S_0/K)_2 = 6.849033023699223\n",
-      "theta/K = -1.542899042729568e-19\n",
-      "(S_0/K)_3 = 8.032463638362131\n",
-      "theta/K = -1.3125624949449521e-22\n",
-      "(S_0/K)_4 = 9.554731033297688\n",
-      "theta/K = -3.1348929092708773e-26\n",
-      "(S_0/K)_5 = 11.573695456591775\n",
-      "theta/K = -1.4372164422461146e-30\n",
-      "(S_0/K)_6 = 14.357320978950769\n",
-      "theta/K = -7.177277755858184e-36\n",
-      "(S_0/K)_7 = 18.395946514677334\n",
-      "theta/K = -1.6010813232418698e-42\n",
-      "(S_0/K)_8 = 24.681846552033782\n",
-      "theta/K = -3.532486000765825e-51\n",
-      "(S_0/K)_9 = 35.5314212930794\n",
-      "theta/K = -4.578072057425271e-63\n",
-      "(S_0/K)_10 = 57.69332703289146\n",
-      "theta/K = -7.240499836720095e-81\n",
-      "(S_0/K)_11 = 120.64262214353735\n",
-      "theta/K = -2.614040339730898e-112\n",
-      "(S_0/K)_12 = 658.0760460090569\n",
-      "theta/K = -1.515964200815546e-204\n",
-      "(S_0/K)_13 = -809.7338040504662\n",
-      "theta/K = nan\n",
-      "Converged at (S_0/K)_14 = nan\n"
+      "-0.06812296053037992\n",
+      "(S_0/K)_1 = 0.4601961145995833\n",
+      "0.029459315533518906\n",
+      "(S_0/K)_2 = 0.4881391107766202\n",
+      "0.029300179772275073\n",
+      "(S_0/K)_3 = 0.5201629835372593\n",
+      "0.028877800750035505\n",
+      "(S_0/K)_4 = 0.557221390210598\n",
+      "0.027784882665603805\n",
+      "(S_0/K)_5 = 0.60007228798315\n",
+      "0.02511931597708877\n",
+      "(S_0/K)_6 = 0.6478424397994033\n",
+      "0.019452485665925383\n",
+      "(S_0/K)_7 = 0.6942562536067973\n",
+      "0.010529318382366582\n",
+      "(S_0/K)_8 = 0.7251952634720095\n",
+      "0.0026864872421540585\n",
+      "(S_0/K)_9 = 0.7341774686717223\n",
+      "0.00015726043498561978\n",
+      "(S_0/K)_10 = 0.734722431978308\n",
+      "5.217499230297795e-07\n",
+      "(S_0/K)_11 = 0.7347242439127344\n",
+      "5.731772695360959e-12\n",
+      "(S_0/K)_12 = 0.7347242439326398\n",
+      "2.0816681711721685e-17\n",
+      "Converged at (S_0/K)_13 = 0.7347242439326399\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-129-5335a6b984c5>:5: RuntimeWarning: invalid value encountered in log\n",
-      "  d1 = (np.log(X) + (r - q + 0.5*(sigma**2)) * T) / (sigma*np.sqrt(T))\n",
-      "<ipython-input-129-5335a6b984c5>:13: RuntimeWarning: invalid value encountered in log\n",
-      "  d1 = (np.log(X) + (r - q + 0.5*(sigma**2)) * T) / (sigma*np.sqrt(T))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>S/K</th>\n",
-       "      <th>Theta/K</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [S/K, Theta/K]\n",
-       "Index: []"
-      ]
-     },
-     "execution_count": 129,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import pandas as pd\n",
+    "#######################\n",
+    "def thetaDivK(X, r, q, T, sigma):\n",
+    "    d1 = (np.log(X) + (r - q + 0.5*(sigma**2)) * T) / (sigma*np.sqrt(T))\n",
+    "    d2 = d1 - sigma*np.sqrt(T)\n",
+    "    N_minusd2 = spstats.norm.cdf(-d2,0,1)\n",
+    "    \n",
+    "    return (-X*sigma*np.exp(-.5*d1**2)/(2*np.sqrt(2*np.pi*T))) + r*np.exp(-r*T)*N_minusd2\n",
+    "\n",
     "\n",
     "#######################\n",
     "def func(X, r, q, T, sigma):\n",
@@ -1425,33 +1417,30 @@
     "    d2 = d1 - sigma*np.sqrt(T)\n",
     "    N_minusd2 = spstats.norm.cdf(-d2,0,1)\n",
     "    \n",
-    "    return -(X*sigma*np.exp(-.5*d1**2))/(2*np.sqrt(2*np.pi*T)) + r*np.exp(-r*T)*N_minusd2\n",
+    "    return 2*r*np.exp(-r*T)*np.sqrt(2*np.pi*T)*np.exp(.5*d1**2)*N_minusd2/sigma - X\n",
     "\n",
     "#######################\n",
     "def funcPrime(X, r, q, T, sigma):\n",
     "    d1 = (np.log(X) + (r - q + 0.5*(sigma**2)) * T) / (sigma*np.sqrt(T))\n",
     "    d2 = d1 - sigma*np.sqrt(T)\n",
+    "    N_minusd2 = spstats.norm.cdf(-d2,0,1)\n",
     "    \n",
-    "    return (1/(X*np.sqrt(T))) * ( (d1*np.exp(-.5*d1**2))/(2*np.sqrt(2*np.pi*T)) - (r*np.exp(-r*T - .5*d2**2))/(sigma*np.sqrt(2*np.pi)))\n",
+    "    return 2*r*np.exp(-r*T)*np.sqrt(2*np.pi*T)*np.exp(.5*d1**2)*(d1*N_minusd2 - (np.exp(-.5*d2**2)/np.sqrt(2*np.pi)))/(X*sigma**2*np.sqrt(T)) - 1\n",
     "\n",
-    "\n",
-    "def moneynessNewton(X, r, q, T, sigma):\n",
+    "def moneynessNewton(X, r, q, T, sigma,tol):\n",
     "    prev = X\n",
     "    n = 0\n",
     "    while True:\n",
     "        n+=1\n",
-    "        thetaDivK = func(prev, r, q, T, sigma)\n",
-    "        current = prev - thetaDivK / funcPrime(prev, r, q, T, sigma)\n",
-    "        print(f'theta/K = {thetaDivK}')\n",
-    "        \n",
-    "        if thetaDivK < 0:\n",
+    "        current = prev - func(prev, r, q, T, sigma) / funcPrime(prev, r, q, T, sigma)\n",
+    "        print(f'{thetaDivK(prev, r, q, T, sigma)}')\n",
+    "        if abs(current-prev) > tol:\n",
     "            print(f'(S_0/K)_{n} = {current}')\n",
     "            prev = current\n",
     "        else:\n",
     "            print(f'Converged at (S_0/K)_{n} = {current}')\n",
     "            break\n",
     "    \n",
-    "    return graph\n",
     "#######################\n",
     "# Given values\n",
     "X_0 = 1\n",
@@ -1459,10 +1448,10 @@
     "q = 0\n",
     "r = 3/100\n",
     "T = 6/12\n",
+    "tol = 10**(-12)\n",
     "                  \n",
     "# Calculate max moneyness using Newton\n",
-    "graph = moneynessNewton(X_0, r, q, T, sigma)\n",
-    "graph"
+    "moneynessNewton(X_0, r, q, T, sigma, tol)"
    ]
   },
   {
