--- a/homework05.ipynb
+++ b/homework05.ipynb
@@ -1358,7 +1358,7 @@
     "    \\end{aligned}\n",
     "\\end{equation}\n",
     "  \n",
-    "Naturally, our initial guess will be that the option will be ATM, i.e. $\\frac{S_0}{K} = 1$ or $X=1$. We will also assume $10^{-12}$ degree of tolerance, i.e. ac"
+    "Naturally, our initial guess will be that the option will be ATM, i.e. $\\frac{S_0}{K} = 1$ or $X=1$. We will also assume $10^{-12}$ degree of tolerance, i.e. up to 12 digit accuracy."
    ]
   },
   {
@@ -1458,7 +1458,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Question 7  \n",
+    "## Question 7  \n",
     "\n",
     "Use bootstrapping to obtain a zero rate curve given the prices of the following semiannual coupon bonds:  \n",
     "\n",
@@ -1472,6 +1472,358 @@
     "Assume that the overnight rate is 5%.  \n",
     "\n",
     "Report the zero rates corresponding to each cash flow date; include the overnight rate. For the Newton’s methods corresponding to the 3–year bond, report the iteration counts and every approximate value. The stopping criterion for each Newton’s method is that two consecutive approximations are within 10−6 of each other, and the initial guess is $x_0 = 0.05$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For 6-month maturity  \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        97.5 =& 100e^{-.5*r(0,.5)}  \\\\\n",
+    "        \\frac{97.5}{100} =& e^{-.5*r(0,.5)}   \\\\\n",
+    "        -.5*r(0,.5) =& \\ln{\\frac{97.5}{100}}  \\\\\n",
+    "        r(0,.5) =& -2 \\ln{\\frac{97.5}{100}}  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r(0,.5) = 0.050635615968579795.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'r(0,.5) = {-2*np.log(97.5/100)}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For 1-year maturity  \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        100 =& 2.5*e^{-.5*r(0,.5)} + 102.5e^{-1*r(0,1)}  \\\\\n",
+    "        100 =& 2.5*e^{-.5*.050635615968579795} + 102.5e^{-1*r(0,1)}   \\\\\n",
+    "        r(0,1) =& -1 \\ln{\\frac{100 - 2.5*e^{-.5*.050635615968579795}}{102.5}}  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r(0,1) = 0.04936960030281209.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'r(0,1) = {-1*np.log((100-2.5*np.exp(-.5*.050635615968579795))/102.5)}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For 3-year maturity  \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        102 =& 2.5*e^{-.5*r(0,.5)} + 2.5*e^{-1*r(0,1)} +  \\\\\n",
+    "             & 2.5*e^{-1.5*r(0,1.5)} + 2.5*e^{-2*r(0,2)} +  \\\\\n",
+    "             & 2.5*e^{-2.5*r(0,2.5)} + 102.5e^{-3*r(0,3)}  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "#### Find 1.5-year maturity rate\n",
+    "  \n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        r(0,1.5) =& \\frac{1.5-1}{3-1} r(0,3) + \\frac{3-1.5}{3-1} r(0,1)  \\\\\n",
+    "                 =& .25 r(0,3) + .75 * .04936960030281209  \\\\\n",
+    "                 =& .25 r(0,3) + .037027200227109064  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "#### Find 2-year maturity rate\n",
+    "  \n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        r(0,2) =& \\frac{2-1}{3-1} r(0,3) + \\frac{3-2}{3-1} r(0,1)  \\\\\n",
+    "               =& .5 r(0,3) + .5 * .04936960030281209  \\\\\n",
+    "               =& .5 r(0,3) + .024684800151406044 \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "#### Find 2.5-year maturity rate\n",
+    "  \n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        r(0,2.5) =& \\frac{2.5-1}{3-1} r(0,3) + \\frac{3-2.5}{3-1} r(0,1)  \\\\\n",
+    "                 =& .75 r(0,3) + .25 * .04936960030281209  \\\\\n",
+    "                 =& .75 r(0,3) + .012342400075703022 \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "We have our CF equation as:  \n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        102 =& 2.5*e^{-.5*.050635615968579795} + 2.5*e^{-1*.04936960030281209} +  \\\\\n",
+    "             & 2.5*e^{-1.5*r(0,1.5)} + 2.5*e^{-2*r(0,2)} + 2.5*e^{-2.5*r(0,2.5)} +  \\\\\n",
+    "             & 102.5e^{-3*r(0,3)}  \\\\\n",
+    "            =& 4.817073170731707 + 2.5e^{-.375r(0,3) -.055540800340663596} +   \\\\\n",
+    "             & 2.5e^{-r(0,3) - .04936960030281209} + 2.5e^{-1.875r(0,3) - .030856000189257556} +  \\\\\n",
+    "             & 102.5e^{-3*r(0,3)}  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Using Newton's method to estimate $r(0,3)$:  \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        r(0,3)_{n+1} =& r(0,3)_n - \\frac{f(r(0,3)_n)}{f'(r(0,3)_n)}. \\\\\n",
+    "        \\text{with}  \\\\\n",
+    "        f(r(0,3)) =& -97.1829268292683 + 2.5e^{-.375r(0,3) -.055540800340663596} +  \\\\\n",
+    "                   & 2.5e^{-r(0,3) - .04936960030281209} + 2.5e^{-1.875r(0,3) - .030856000189257556} +  \\\\\n",
+    "                   & 102.5e^{-3r(0,3)}  \\\\\n",
+    "        \\text{and}  \\\\\n",
+    "        f'(r(0,3)) =& -.8868500876671727e^{-.375r(0,3)} -  \\\\\n",
+    "                    & 2.379573170731707e^{-r(0,3)} -  \\\\\n",
+    "                    & 4.545071191064284e^{-1.875r(0,3)}  +  \\\\\n",
+    "                    & -307.5e^{-3r(0,3)}  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 240,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r(0,3)_1 = 0.04202499124118267\n",
+      "r(0,3)_2 = 0.04211759111529119\n",
+      "Converged at r(0,3)_2 = 0.04211760380138151\n",
+      "r(0,1.5) = 0.047556601177454444\n",
+      "r(0,2) = 0.0457436020520968\n",
+      "r(0,2.5) = 0.04393060292673916\n",
+      "r(0,3) = 0.04211760380138151\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func(r):\n",
+    "    return -97.1829268292683 + 2.5*np.exp(-.375*r - .055540800340663596) + 2.5*np.exp(-r - .04936960030281209) + 2.5*np.exp(-1.875*r - .030856000189257556) + 102.5*np.exp(-3*r)\n",
+    "\n",
+    "def funcPrime(r):\n",
+    "    return -.8868500876671727*np.exp(-.375*r) - 2.379573170731707*np.exp(-r) - 4.545071191064284*np.exp(-1.875*r) + -307.5*np.exp(-3*r)\n",
+    "\n",
+    "def bootstrapNewton3yr(r, tol):\n",
+    "    n=0\n",
+    "    prev = r\n",
+    "    \n",
+    "    while True:\n",
+    "        current = prev - func(prev)/funcPrime(prev)\n",
+    "        \n",
+    "        if abs(current-prev) > tol:\n",
+    "            n+=1\n",
+    "            prev=current\n",
+    "            print(f'r(0,3)_{n} = {current}')\n",
+    "        else:\n",
+    "            print(f'Converged at r(0,3)_{n} = {current}')\n",
+    "            break\n",
+    "    \n",
+    "    return current\n",
+    "\n",
+    "r = .05\n",
+    "tol = 10**-6\n",
+    "rApprox3 = bootstrapNewton3yr(r, tol)\n",
+    "\n",
+    "print(f'r(0,1.5) = {.25*rApprox3 + .037027200227109064}')\n",
+    "print(f'r(0,2) = {.5*rApprox3 + .024684800151406044}')\n",
+    "print(f'r(0,2.5) = {.75*rApprox3 + .012342400075703022}')\n",
+    "print(f'r(0,3) = {rApprox3}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### For 5-year maturity  \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        104 = &3*e^{-.5r(0,.5)} + 3*e^{-r(0,1)} + \\\\\n",
+    "              &3*e^{-1.5r(0,1.5)} + 3*e^{-2r(0,2)} + \\\\\n",
+    "              &3*e^{-2.5r(0,2.5)} + 3*e^{-3r(0,3)} + \\\\\n",
+    "              &3*e^{-3.5r(0,3.5)} + 3*e^{-4r(0,4)} + \\\\\n",
+    "              &3*e^{-4.5*r(0,4.5)} + 103e^{-5r(0,5)}  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "#### Find 3.5-year maturity rate\n",
+    "  \n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        r(0,3.5) =& \\frac{3.5-3}{5-3} r(0,5) + \\frac{5-3.5}{5-3} r(0,3)  \\\\\n",
+    "                 =& .25 r(0,5) + .75 * .04211760380138151 \\\\\n",
+    "                 =& .25 r(0,5) + .03158820285103613  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "#### Find 4-year maturity rate\n",
+    "  \n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        r(0,4) =& \\frac{4-3}{5-3} r(0,5) + \\frac{5-4}{5-3} r(0,3)  \\\\\n",
+    "                 =& .5 r(0,5) + .5 * .04211760380138151 \\\\\n",
+    "                 =& .5 r(0,5) + .021058801900690757  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "#### Find 4.5-year maturity rate\n",
+    "  \n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        r(0,4.5) =& \\frac{4.5-3}{5-3} r(0,5) + \\frac{5-4.5}{5-3} r(0,3)  \\\\\n",
+    "                 =& .75 r(0,5) + .25 * .04211760380138151 \\\\\n",
+    "                 =& .75 r(0,5) + .010529400950345378  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "  \n",
+    "  \n",
+    "We have our CF equation as:  \n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        104 = & 3*e^{-.5r(0,.5)} + 3*e^{-r(0,1)} + \\\\\n",
+    "              & 3*e^{-1.5r(0,1.5)} + 3*e^{-2r(0,2)} + \\\\\n",
+    "              & 3*e^{-2.5r(0,2.5)} + 3*e^{-3r(0,3)} + \\\\\n",
+    "              & 3*e^{-3.5r(0,3.5)} + 3*e^{-4r(0,4)} + \\\\\n",
+    "              & 3*e^{-4.5*r(0,4.5)} + 103e^{-5r(0,5)}  \\\\\n",
+    "            = & 16.64353705501803 + 3e^{-.875r(0,5) -.11055870997862646} +   \\\\\n",
+    "              & 3e^{-2r(0,5) - .08423520760276303} + 3e^{-3.375r(0,5) - .0473823042765542} +  \\\\\n",
+    "              & 103e^{-5*r(0,5)}  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}\n",
+    "\n",
+    "Using Newton's method to estimate $r(0,5)$:  \n",
+    "\n",
+    "\\begin{equation}\n",
+    "    \\begin{aligned}\n",
+    "        r(0,5)_{n+1} =& r(0,5)_n - \\frac{f(r(0,5)_n)}{f'(r(0,5)_n)}. \\\\\n",
+    "        \\text{with}  \\\\\n",
+    "        f(r(0,5)) =& -87.35646294498197 + 3e^{-.875r(0,5) -.11055870997862646} +   \\\\\n",
+    "                   & 3e^{-2r(0,5) - .08423520760276303} + 3e^{-3.375r(0,5) - .0473823042765542} +  \\\\\n",
+    "                   & 103e^{-5*r(0,5)}  \\\\\n",
+    "        \\text{and}  \\\\\n",
+    "        f'(r(0,5)) =& -2.3502511295032464e^{-.875r(0,5)} +  \\\\\n",
+    "                    & -5.5152901458249035e^{-2r(0,5)} +  \\\\\n",
+    "                    & -9.656442495574005e^{-3.375r(0,5)}  +  \\\\\n",
+    "                    & -515e^{-5r(0,5)}  \\\\\n",
+    "    \\end{aligned}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r(0,5)_1 = 0.05082392179315856\n",
+      "r(0,5)_2 = 0.05082559282259847\n",
+      "Converged at r(0,5)_2 = 0.05082559282945331\n"
+     ]
+    }
+   ],
+   "source": [
+    "def func5(r):\n",
+    "    return -87.35646294498197 + 3*np.exp(-.875*r - .11055870997862646) + 3*np.exp(-2*r - .08423520760276303) + 3*np.exp(-3.375*r - .0473823042765542) + 103*np.exp(-5*r)\n",
+    "\n",
+    "def funcPrime5(r):\n",
+    "    return -2.3502511295032464*np.exp(-.875*r) - 5.5152901458249035*np.exp(-2*r) - 9.656442495574005*np.exp(-3.375*r) + -515*np.exp(-5*r)\n",
+    "\n",
+    "def bootstrapNewton5yr(r, tol):\n",
+    "    n=0\n",
+    "    prev = r\n",
+    "    \n",
+    "    while True:\n",
+    "        current = prev - func5(prev)/funcPrime5(prev)\n",
+    "        \n",
+    "        if abs(current-prev) > tol:\n",
+    "            n+=1\n",
+    "            prev=current\n",
+    "            print(f'r(0,5)_{n} = {current}')\n",
+    "        else:\n",
+    "            print(f'Converged at r(0,5)_{n} = {current}')\n",
+    "            break\n",
+    "    \n",
+    "    return current\n",
+    "\n",
+    "r = .05\n",
+    "tol = 10**-6\n",
+    "rApprox5 = bootstrapNewton5yr(r, tol)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r(0,.5) = 0.050635615968579795\n",
+      "r(0,1) = 0.04936960030281209\n",
+      "r(0,1.5) = 0.047556601177454444\n",
+      "r(0,2) = 0.0457436020520968\n",
+      "r(0,2.5) = 0.04393060292673916\n",
+      "r(0,3) = 0.04211760380138151\n",
+      "r(0,3.5) = 0.04429460105839946\n",
+      "r(0,4) = 0.04647159831541741\n",
+      "r(0,4.5) = 0.04864859557243536\n",
+      "r(0,5) = 0.05082559282945331\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'r(0,.5) = {.050635615968579795}')\n",
+    "print(f'r(0,1) = {.04936960030281209}')\n",
+    "print(f'r(0,1.5) = {.25*rApprox3 + .037027200227109064}')\n",
+    "print(f'r(0,2) = {.5*rApprox3 + .024684800151406044}')\n",
+    "print(f'r(0,2.5) = {.75*rApprox3 + .012342400075703022}')\n",
+    "print(f'r(0,3) = {rApprox3}')\n",
+    "print(f'r(0,3.5) = {.25*rApprox5 + .03158820285103613}')\n",
+    "print(f'r(0,4) = {.5*rApprox5 + .021058801900690757}')\n",
+    "print(f'r(0,4.5) = {.75*rApprox5 + .010529400950345378}')\n",
+    "print(f'r(0,5) = {rApprox5}')"
    ]
   },
   {
