--- a/homework05_q1to7.ipynb
+++ b/homework05_q1to7.ipynb
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -182,11 +182,9 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>K</th>\n",
-       "      <th>Ticker_C</th>\n",
        "      <th>Bid_C</th>\n",
        "      <th>Ask_C</th>\n",
        "      <th>Volm_C</th>\n",
-       "      <th>Ticker_P</th>\n",
        "      <th>Bid_P</th>\n",
        "      <th>Ask_P</th>\n",
        "      <th>Volm_P</th>\n",
@@ -200,11 +198,9 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2150</td>\n",
-       "      <td>SPXW 9/29/17 C2150</td>\n",
        "      <td>259.299987800</td>\n",
        "      <td>260.700012200</td>\n",
        "      <td>0</td>\n",
-       "      <td>SPXW 9/29/17 P2150</td>\n",
        "      <td>34.79999924</td>\n",
        "      <td>35.70000076</td>\n",
        "      <td>10</td>\n",
@@ -216,11 +212,9 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2175</td>\n",
-       "      <td>SPXW 9/29/17 C2175</td>\n",
        "      <td>238.100006100</td>\n",
        "      <td>239.600006100</td>\n",
        "      <td>0</td>\n",
-       "      <td>SPXW 9/29/17 P2175</td>\n",
        "      <td>38.50000000</td>\n",
        "      <td>39.40000153</td>\n",
        "      <td>10</td>\n",
@@ -232,11 +226,9 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2200</td>\n",
-       "      <td>SPXW 9/29/17 C2200</td>\n",
        "      <td>217.399993900</td>\n",
        "      <td>218.899993900</td>\n",
        "      <td>0</td>\n",
-       "      <td>SPXW 9/29/17 P2200</td>\n",
        "      <td>42.50000000</td>\n",
        "      <td>43.50000000</td>\n",
        "      <td>10</td>\n",
@@ -248,11 +240,9 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>2225</td>\n",
-       "      <td>SPXW 9/29/17 C2225</td>\n",
        "      <td>197.199996900</td>\n",
        "      <td>198.699996900</td>\n",
        "      <td>0</td>\n",
-       "      <td>SPXW 9/29/17 P2225</td>\n",
        "      <td>47.09999847</td>\n",
        "      <td>48.09999847</td>\n",
        "      <td>0</td>\n",
@@ -264,11 +254,9 @@
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>2250</td>\n",
-       "      <td>SPXW 9/29/17 C2250</td>\n",
        "      <td>177.399993900</td>\n",
        "      <td>178.899993900</td>\n",
        "      <td>0</td>\n",
-       "      <td>SPXW 9/29/17 P2250</td>\n",
        "      <td>52.09999847</td>\n",
        "      <td>53.20000076</td>\n",
        "      <td>1</td>\n",
@@ -280,11 +268,9 @@
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>2275</td>\n",
-       "      <td>SPXW 9/29/17 C2275</td>\n",
        "      <td>158.300003100</td>\n",
        "      <td>159.699996900</td>\n",
        "      <td>0</td>\n",
-       "      <td>SPXW 9/29/17 P2275</td>\n",
        "      <td>57.79999924</td>\n",
        "      <td>58.90000153</td>\n",
        "      <td>0</td>\n",
@@ -296,11 +282,9 @@
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>2300</td>\n",
-       "      <td>SPXW 9/29/17 C2300</td>\n",
        "      <td>139.800003100</td>\n",
        "      <td>141.300003100</td>\n",
        "      <td>0</td>\n",
-       "      <td>SPXW 9/29/17 P2300</td>\n",
        "      <td>64.09999847</td>\n",
        "      <td>65.30000305</td>\n",
        "      <td>1</td>\n",
@@ -312,11 +296,9 @@
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>2325</td>\n",
-       "      <td>SPXW 9/29/17 C2325</td>\n",
        "      <td>122.099998500</td>\n",
        "      <td>123.599998500</td>\n",
        "      <td>0</td>\n",
-       "      <td>SPXW 9/29/17 P2325</td>\n",
        "      <td>71.19999695</td>\n",
        "      <td>72.50000000</td>\n",
        "      <td>2</td>\n",
@@ -328,11 +310,9 @@
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>2350</td>\n",
-       "      <td>SPXW 9/29/17 C2350</td>\n",
        "      <td>105.300003100</td>\n",
        "      <td>106.800003100</td>\n",
        "      <td>5</td>\n",
-       "      <td>SPXW 9/29/17 P2350</td>\n",
        "      <td>79.09999847</td>\n",
        "      <td>80.50000000</td>\n",
        "      <td>0</td>\n",
@@ -344,11 +324,9 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>2375</td>\n",
-       "      <td>SPXW 9/29/17 C2375</td>\n",
        "      <td>89.500000000</td>\n",
        "      <td>90.900001530</td>\n",
        "      <td>5</td>\n",
-       "      <td>SPXW 9/29/17 P2375</td>\n",
        "      <td>88.09999847</td>\n",
        "      <td>89.50000000</td>\n",
        "      <td>4</td>\n",
@@ -360,11 +338,9 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>2400</td>\n",
-       "      <td>SPXW 9/29/17 C2400</td>\n",
        "      <td>74.800003050</td>\n",
        "      <td>76.099998470</td>\n",
        "      <td>12</td>\n",
-       "      <td>SPXW 9/29/17 P2400</td>\n",
        "      <td>98.09999847</td>\n",
        "      <td>99.50000000</td>\n",
        "      <td>1</td>\n",
@@ -376,11 +352,9 @@
        "    <tr>\n",
        "      <th>11</th>\n",
        "      <td>2425</td>\n",
-       "      <td>SPXW 9/29/17 C2425</td>\n",
        "      <td>61.299999240</td>\n",
        "      <td>62.599998470</td>\n",
        "      <td>0</td>\n",
-       "      <td>SPXW 9/29/17 P2425</td>\n",
        "      <td>109.40000150</td>\n",
        "      <td>110.90000150</td>\n",
        "      <td>0</td>\n",
@@ -392,11 +366,9 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>2450</td>\n",
-       "      <td>SPXW 9/29/17 C2450</td>\n",
        "      <td>49.099998470</td>\n",
        "      <td>50.299999240</td>\n",
        "      <td>0</td>\n",
-       "      <td>SPXW 9/29/17 P2450</td>\n",
        "      <td>122.00000000</td>\n",
        "      <td>123.50000000</td>\n",
        "      <td>0</td>\n",
@@ -408,11 +380,9 @@
        "    <tr>\n",
        "      <th>13</th>\n",
        "      <td>2475</td>\n",
-       "      <td>SPXW 9/29/17 C2475</td>\n",
        "      <td>38.500000000</td>\n",
        "      <td>39.599998470</td>\n",
        "      <td>370</td>\n",
-       "      <td>SPXW 9/29/17 P2475</td>\n",
        "      <td>136.10000610</td>\n",
        "      <td>137.60000610</td>\n",
        "      <td>0</td>\n",
@@ -424,11 +394,9 @@
        "    <tr>\n",
        "      <th>14</th>\n",
        "      <td>2500</td>\n",
-       "      <td>SPXW 9/29/17 C2500</td>\n",
        "      <td>29.399999620</td>\n",
        "      <td>30.299999240</td>\n",
        "      <td>5</td>\n",
-       "      <td>SPXW 9/29/17 P2500</td>\n",
        "      <td>151.69999690</td>\n",
        "      <td>153.30000310</td>\n",
        "      <td>0</td>\n",
@@ -440,11 +408,9 @@
        "    <tr>\n",
        "      <th>15</th>\n",
        "      <td>2550</td>\n",
-       "      <td>SPXW 9/29/17 C2550</td>\n",
        "      <td>15.699999810</td>\n",
        "      <td>16.399999620</td>\n",
        "      <td>39</td>\n",
-       "      <td>SPXW 9/29/17 P2550</td>\n",
        "      <td>185.89999390</td>\n",
        "      <td>190.00000000</td>\n",
        "      <td>0</td>\n",
@@ -456,11 +422,9 @@
        "    <tr>\n",
        "      <th>16</th>\n",
        "      <td>2600</td>\n",
-       "      <td>SPXW 9/29/17 C2600</td>\n",
        "      <td>7.699999809</td>\n",
        "      <td>8.199999809</td>\n",
        "      <td>2</td>\n",
-       "      <td>SPXW 9/29/17 P2600</td>\n",
        "      <td>227.19999690</td>\n",
        "      <td>231.69999690</td>\n",
        "      <td>0</td>\n",
@@ -472,11 +436,9 @@
        "    <tr>\n",
        "      <th>17</th>\n",
        "      <td>2650</td>\n",
-       "      <td>SPXW 9/29/17 C2650</td>\n",
        "      <td>3.599999905</td>\n",
        "      <td>4.000000000</td>\n",
        "      <td>17</td>\n",
-       "      <td>SPXW 9/29/17 P2650</td>\n",
        "      <td>265.89999390</td>\n",
        "      <td>285.89999390</td>\n",
        "      <td>0</td>\n",
@@ -488,11 +450,9 @@
        "    <tr>\n",
        "      <th>18</th>\n",
        "      <td>2700</td>\n",
-       "      <td>SPXW 9/29/17 C2700</td>\n",
        "      <td>1.750000000</td>\n",
        "      <td>2.049999952</td>\n",
        "      <td>71</td>\n",
-       "      <td>SPXW 9/29/17 P2700</td>\n",
        "      <td>313.70001220</td>\n",
        "      <td>333.60000610</td>\n",
        "      <td>0</td>\n",
@@ -504,11 +464,9 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>2800</td>\n",
-       "      <td>SPXW 9/29/17 C2800</td>\n",
        "      <td>0.550000012</td>\n",
        "      <td>0.750000000</td>\n",
        "      <td>10</td>\n",
-       "      <td>SPXW 9/29/17 P2800</td>\n",
        "      <td>411.70001220</td>\n",
        "      <td>431.50000000</td>\n",
        "      <td>0</td>\n",
@@ -522,74 +480,52 @@
        "</div>"
       ],
       "text/plain": [
-       "       K            Ticker_C          Bid_C          Ask_C  Volm_C  \\\n",
-       "0   2150  SPXW 9/29/17 C2150  259.299987800  260.700012200       0   \n",
-       "1   2175  SPXW 9/29/17 C2175  238.100006100  239.600006100       0   \n",
-       "2   2200  SPXW 9/29/17 C2200  217.399993900  218.899993900       0   \n",
-       "3   2225  SPXW 9/29/17 C2225  197.199996900  198.699996900       0   \n",
-       "4   2250  SPXW 9/29/17 C2250  177.399993900  178.899993900       0   \n",
-       "5   2275  SPXW 9/29/17 C2275  158.300003100  159.699996900       0   \n",
-       "6   2300  SPXW 9/29/17 C2300  139.800003100  141.300003100       0   \n",
-       "7   2325  SPXW 9/29/17 C2325  122.099998500  123.599998500       0   \n",
-       "8   2350  SPXW 9/29/17 C2350  105.300003100  106.800003100       5   \n",
-       "9   2375  SPXW 9/29/17 C2375   89.500000000   90.900001530       5   \n",
-       "10  2400  SPXW 9/29/17 C2400   74.800003050   76.099998470      12   \n",
-       "11  2425  SPXW 9/29/17 C2425   61.299999240   62.599998470       0   \n",
-       "12  2450  SPXW 9/29/17 C2450   49.099998470   50.299999240       0   \n",
-       "13  2475  SPXW 9/29/17 C2475   38.500000000   39.599998470     370   \n",
-       "14  2500  SPXW 9/29/17 C2500   29.399999620   30.299999240       5   \n",
-       "15  2550  SPXW 9/29/17 C2550   15.699999810   16.399999620      39   \n",
-       "16  2600  SPXW 9/29/17 C2600    7.699999809    8.199999809       2   \n",
-       "17  2650  SPXW 9/29/17 C2650    3.599999905    4.000000000      17   \n",
-       "18  2700  SPXW 9/29/17 C2700    1.750000000    2.049999952      71   \n",
-       "19  2800  SPXW 9/29/17 C2800    0.550000012    0.750000000      10   \n",
+       "       K          Bid_C          Ask_C  Volm_C         Bid_P         Ask_P  \\\n",
+       "0   2150  259.299987800  260.700012200       0   34.79999924   35.70000076   \n",
+       "1   2175  238.100006100  239.600006100       0   38.50000000   39.40000153   \n",
+       "2   2200  217.399993900  218.899993900       0   42.50000000   43.50000000   \n",
+       "3   2225  197.199996900  198.699996900       0   47.09999847   48.09999847   \n",
+       "4   2250  177.399993900  178.899993900       0   52.09999847   53.20000076   \n",
+       "5   2275  158.300003100  159.699996900       0   57.79999924   58.90000153   \n",
+       "6   2300  139.800003100  141.300003100       0   64.09999847   65.30000305   \n",
+       "7   2325  122.099998500  123.599998500       0   71.19999695   72.50000000   \n",
+       "8   2350  105.300003100  106.800003100       5   79.09999847   80.50000000   \n",
+       "9   2375   89.500000000   90.900001530       5   88.09999847   89.50000000   \n",
+       "10  2400   74.800003050   76.099998470      12   98.09999847   99.50000000   \n",
+       "11  2425   61.299999240   62.599998470       0  109.40000150  110.90000150   \n",
+       "12  2450   49.099998470   50.299999240       0  122.00000000  123.50000000   \n",
+       "13  2475   38.500000000   39.599998470     370  136.10000610  137.60000610   \n",
+       "14  2500   29.399999620   30.299999240       5  151.69999690  153.30000310   \n",
+       "15  2550   15.699999810   16.399999620      39  185.89999390  190.00000000   \n",
+       "16  2600    7.699999809    8.199999809       2  227.19999690  231.69999690   \n",
+       "17  2650    3.599999905    4.000000000      17  265.89999390  285.89999390   \n",
+       "18  2700    1.750000000    2.049999952      71  313.70001220  333.60000610   \n",
+       "19  2800    0.550000012    0.750000000      10  411.70001220  431.50000000   \n",
        "\n",
-       "              Ticker_P         Bid_P         Ask_P  Volm_P             C_m  \\\n",
-       "0   SPXW 9/29/17 P2150   34.79999924   35.70000076      10  260.0000000000   \n",
-       "1   SPXW 9/29/17 P2175   38.50000000   39.40000153      10  238.8500061000   \n",
-       "2   SPXW 9/29/17 P2200   42.50000000   43.50000000      10  218.1499939000   \n",
-       "3   SPXW 9/29/17 P2225   47.09999847   48.09999847       0  197.9499969000   \n",
-       "4   SPXW 9/29/17 P2250   52.09999847   53.20000076       1  178.1499939000   \n",
-       "5   SPXW 9/29/17 P2275   57.79999924   58.90000153       0  159.0000000000   \n",
-       "6   SPXW 9/29/17 P2300   64.09999847   65.30000305       1  140.5500031000   \n",
-       "7   SPXW 9/29/17 P2325   71.19999695   72.50000000       2  122.8499985000   \n",
-       "8   SPXW 9/29/17 P2350   79.09999847   80.50000000       0  106.0500031000   \n",
-       "9   SPXW 9/29/17 P2375   88.09999847   89.50000000       4   90.2000007650   \n",
-       "10  SPXW 9/29/17 P2400   98.09999847   99.50000000       1   75.4500007600   \n",
-       "11  SPXW 9/29/17 P2425  109.40000150  110.90000150       0   61.9499988550   \n",
-       "12  SPXW 9/29/17 P2450  122.00000000  123.50000000       0   49.6999988550   \n",
-       "13  SPXW 9/29/17 P2475  136.10000610  137.60000610       0   39.0499992350   \n",
-       "14  SPXW 9/29/17 P2500  151.69999690  153.30000310       0   29.8499994300   \n",
-       "15  SPXW 9/29/17 P2550  185.89999390  190.00000000       0   16.0499997150   \n",
-       "16  SPXW 9/29/17 P2600  227.19999690  231.69999690       0    7.9499998090   \n",
-       "17  SPXW 9/29/17 P2650  265.89999390  285.89999390       0    3.7999999525   \n",
-       "18  SPXW 9/29/17 P2700  313.70001220  333.60000610       0    1.8999999760   \n",
-       "19  SPXW 9/29/17 P2800  411.70001220  431.50000000       0    0.6500000060   \n",
-       "\n",
-       "              P_m         sigma_C         sigma_P  \n",
-       "0    35.250000000  0.321891421844  0.339752167052  \n",
-       "1    38.950000765  0.312206625291  0.330389380514  \n",
-       "2    43.000000000  0.302313227892  0.320743004830  \n",
-       "3    47.599998470  0.292249548170  0.310979105751  \n",
-       "4    52.649999615  0.281922979344  0.301007607281  \n",
-       "5    58.350000385  0.271554051444  0.291006121141  \n",
-       "6    64.700000760  0.261194503262  0.280980330698  \n",
-       "7    71.849998475  0.250900599957  0.271078830602  \n",
-       "8    79.799999235  0.240829837576  0.261317555810  \n",
-       "9    88.799999235  0.231054110963  0.251959637150  \n",
-       "10   98.799999235  0.221751429440  0.242988818277  \n",
-       "11  110.150001500  0.213114095051  0.234796039386  \n",
-       "12  122.750000000  0.205193668653  0.227335084379  \n",
-       "13  136.850006100  0.198417387782  0.220927430437  \n",
-       "14  152.500000000  0.192705142620  0.215703644336  \n",
-       "15  187.949996950  0.185073384796  0.208589652416  \n",
-       "16  229.449996900  0.182615285980  0.207086619514  \n",
-       "17  275.899993900  0.183954416707  0.210671787254  \n",
-       "18  323.650009150  0.187496564267  0.215414005586  \n",
-       "19  421.600006100  0.196802527955  0.227216427520  "
+       "    Volm_P             C_m            P_m         sigma_C         sigma_P  \n",
+       "0       10  260.0000000000   35.250000000  0.321891421844  0.339752167052  \n",
+       "1       10  238.8500061000   38.950000765  0.312206625291  0.330389380514  \n",
+       "2       10  218.1499939000   43.000000000  0.302313227892  0.320743004830  \n",
+       "3        0  197.9499969000   47.599998470  0.292249548170  0.310979105751  \n",
+       "4        1  178.1499939000   52.649999615  0.281922979344  0.301007607281  \n",
+       "5        0  159.0000000000   58.350000385  0.271554051444  0.291006121141  \n",
+       "6        1  140.5500031000   64.700000760  0.261194503262  0.280980330698  \n",
+       "7        2  122.8499985000   71.849998475  0.250900599957  0.271078830602  \n",
+       "8        0  106.0500031000   79.799999235  0.240829837576  0.261317555810  \n",
+       "9        4   90.2000007650   88.799999235  0.231054110963  0.251959637150  \n",
+       "10       1   75.4500007600   98.799999235  0.221751429440  0.242988818277  \n",
+       "11       0   61.9499988550  110.150001500  0.213114095051  0.234796039386  \n",
+       "12       0   49.6999988550  122.750000000  0.205193668653  0.227335084379  \n",
+       "13       0   39.0499992350  136.850006100  0.198417387782  0.220927430437  \n",
+       "14       0   29.8499994300  152.500000000  0.192705142620  0.215703644336  \n",
+       "15       0   16.0499997150  187.949996950  0.185073384796  0.208589652416  \n",
+       "16       0    7.9499998090  229.449996900  0.182615285980  0.207086619514  \n",
+       "17       0    3.7999999525  275.899993900  0.183954416707  0.210671787254  \n",
+       "18       0    1.8999999760  323.650009150  0.187496564267  0.215414005586  \n",
+       "19       0    0.6500000060  421.600006100  0.196802527955  0.227216427520  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
